added some game touch physics

--- a/runner/index.html
+++ b/runner/index.html
@@ -11,6 +11,7 @@
 	<script src="js/game/states/Boot.js"></script>
 	<script src="js/game/states/Preload.js"></script>
 	<script src="js/game/states/MainMenu.js"></script>
+	<script src="js/game/states/Game.js"></script>
 	<!--include prefabs-->
 
 
