added missiles and coins

--- a/runner/index.html
+++ b/runner/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" type="image/png" href="./assets/images/cartoonStan.jpg">
 	<title>Stan Runner</title>
 	<meta name="apple-mobile-web-app-cable" content="yes"> <!-- run properly in apple mobile browsers-->
 	<meta name="viewport" content="minimal-ui"> <!-- run properly in apple mobile browsers-->
@@ -13,7 +14,8 @@
 	<script src="js/game/states/MainMenu.js"></script>
 	<script src="js/game/states/Game.js"></script>
 	<!--include prefabs-->
-
+	<script src="js/game/prefabs/Coin.js"></script>
+	<script src="js/game/prefabs/Enemy.js"></script>
 
 	<link rel="stylesheet" href="styles.css">
 </head>
