final touches on game logic

--- a/runner/index.html
+++ b/runner/index.html
@@ -16,6 +16,7 @@
 	<!--include prefabs-->
 	<script src="js/game/prefabs/Coin.js"></script>
 	<script src="js/game/prefabs/Enemy.js"></script>
+	<script src="js/game/prefabs/Scoreboard.js"></script>
 
 	<link rel="stylesheet" href="styles.css">
 </head>
